# API/Features/Quiz/API/Response.cs
@@ -5,17 +5,20 @@ namespace API.Features.Quiz.API;
 public interface IQuizPostApi
 {
     [Post("/api/v1/questions")]
-    Task<Root[]> GetQuestions([Body(BodySerializationMethod.UrlEncoded)] QuizPost quizPost);
+    Task<Root> GetQuestions([Body(BodySerializationMethod.UrlEncoded)] QuizPost quizPost);
 }
 
 // https://quizapi.io/api/v1/questions?apiKey={APIKey}&limit={amount}&category={category}&difficulty={difficulty};
 public class QuizPost
 {
-    [AliasAs("apiKey")]
-    public string ApiKey { get; set; }
+    [AliasAs("token")]
+    public string Token { get; set; }
     
-    [AliasAs("limit")]
-    public int Limit { get; set; }
+    [AliasAs("type")]
+    public string Type { get; set; }
+    
+    [AliasAs("amount")]
+    public int Amount { get; set; }
 
     [AliasAs("category")]
     public Category Category { get; set; }
@@ -32,37 +35,19 @@ public class QuizSettingsModel
     public Difficulty Difficulty { get; set; }
 }
 
+// Root myDeserializedClass = JsonConvert.DeserializeObject<Root>(myJsonResponse);
+public class Result
+{
+    public string category { get; set; }
+    public string type { get; set; }
+    public string difficulty { get; set; }
+    public string question { get; set; }
+    public string correct_answer { get; set; }
+    public List<string> incorrect_answers { get; set; }
+}
+
 public class Root
 {
-    public int id { get; set; }
-    public string question { get; set; }
-    public string description { get; set; }
-    public Answers answers { get; set; }
-    public string multiple_correct_answers { get; set; }
-    public Correct_Answers correct_answers { get; set; }
-    public string explanation { get; set; }
-    public object tip { get; set; }
-    public object[] tags { get; set; }
-    public string category { get; set; }
-    public string difficulty { get; set; }
-}
-
-public class Answers
-{
-    public string answer_a { get; set; }
-    public string answer_b { get; set; }
-    public string answer_c { get; set; }
-    public string answer_d { get; set; }
-    public object answer_e { get; set; }
-    public object answer_f { get; set; }
-}
-
-public class Correct_Answers
-{
-    public string answer_a_correct { get; set; }
-    public string answer_b_correct { get; set; }
-    public string answer_c_correct { get; set; }
-    public string answer_d_correct { get; set; }
-    public string answer_e_correct { get; set; }
-    public string answer_f_correct { get; set; }
+    public int response_code { get; set; }
+    public List<Result> results { get; set; }
 }
