# Client/src/providers/swagger.json
@@ -309,6 +309,12 @@
         "type": "object",
         "additionalProperties": false,
         "properties": {
+          "gameActive": {
+            "type": "boolean"
+          },
+          "currentQuestion": {
+            "$ref": "#/components/schemas/Root"
+          },
           "questions": {
             "type": "integer",
             "format": "int32"
@@ -326,6 +332,89 @@
             "items": {
               "$ref": "#/components/schemas/Player"
             }
+          }
+        }
+      },
+      "Root": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "question": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "answers": {
+            "$ref": "#/components/schemas/Answers"
+          },
+          "multiple_correct_answers": {
+            "type": "string"
+          },
+          "correct_answers": {
+            "$ref": "#/components/schemas/Correct_Answers"
+          },
+          "explanation": {
+            "type": "string"
+          },
+          "tip": {},
+          "tags": {
+            "type": "array",
+            "items": {}
+          },
+          "category": {
+            "type": "string"
+          },
+          "difficulty": {
+            "type": "string"
+          }
+        }
+      },
+      "Answers": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "answer_a": {
+            "type": "string"
+          },
+          "answer_b": {
+            "type": "string"
+          },
+          "answer_c": {
+            "type": "string"
+          },
+          "answer_d": {
+            "type": "string"
+          },
+          "answer_e": {},
+          "answer_f": {}
+        }
+      },
+      "Correct_Answers": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "answer_a_correct": {
+            "type": "string"
+          },
+          "answer_b_correct": {
+            "type": "string"
+          },
+          "answer_c_correct": {
+            "type": "string"
+          },
+          "answer_d_correct": {
+            "type": "string"
+          },
+          "answer_e_correct": {
+            "type": "string"
+          },
+          "answer_f_correct": {
+            "type": "string"
           }
         }
       },
